# demo-cookiecutter-api

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  setup.cfg
conda-envs/: environment.demo-cookiecutter-api-docs.yml
docs/: conf.py  index.rst
docs/_splashpage/: index.html
docs/wiki/: Home.md
src/demo_db_api/: api.py  config.py  crud.py  database.py  models.py  routers.py
src/demo_db_api/schemas/: db.py  response.py
tests/: conftest.py  test_api.py  test_cli.py  test_crud.py  test_models.py
