[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_db_api"
# Add brief project description
description = "My package description"
readme = "README.md"
keywords = ["one", "two"]
license = {text = "MIT"}
# Set the minimum version of Python required to run the code
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
# Update and version pin all runtime dependencies
dependencies = [
    "fastapi>=0.95.1",
    "sqlalchemy>=2.0.12"
]

# Set any development related dependencies here
[project.optional-dependencies]
tests = [
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.24.0",
    "pytest",
    "requests",
    "sphinx",
    "sphinx-intl",
    "myst-parser",
    "sphinx-autoapi",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

# Setuptools_scm will create the version based on git tags
[tool.setuptools_scm]
write_to = "src/demo_db_api/_version.py"

[tool.pytest.ini_options]
pythonpath = [ "src" ]